[package]
name = "qoi-visualizer"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.51"
base64 = "0.13.0"
console_error_panic_hook = "0.1.7"
gloo-file = { version = "0.2.0", features = ["futures"] }
seed = "0.8.0"
strum = "0.23.0"
strum_macros = "0.23.1"
wasm-bindgen = "0.2.78"

[dependencies.image]
version = "0.23.14"
default-features = false
features = [
    "gif",
    "jpeg",
    "ico",
    "png",
    "pnm",
    "tga",
    "tiff",
    "webp",
    "bmp",
    "hdr",
    "dxt",
    "dds",
    "farbfeld",
]

[dependencies.web-sys]
version = "0.3.55"
features = [
    "ImageData",
]
